# sobel_filter

./: .gitignore  LICENSE  README.md
hw/rtl/: pcie_package.sv  rgb2luma.sv  sobel_filter.sv  sobel_unit.sv
hw/scripts/: run.f
hw/testbench/: libpng_interface.c  testbench.sv
sw/: CMakeLists.txt
sw/include/: gaussian.h  image.h  sobel.h
sw/src/: gaussian.cpp  image.cpp  main.cpp  sobel.cpp
